--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,27 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".AddAssignmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AssignmentListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AttendanceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ClassListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TimetableActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EnterMarksActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivityTeacher"
+            android:exported="false" />
+        <activity
             android:name=".ExamRemindersFragment"
             android:exported="false" />
         <activity
